--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
-    "antd": "^3.25.3",
-    "axios": "^0.19.0",
+    "antd": "^4.16.13",
+    "axios": "^0.21.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^1.1.5",
     "redux": "^4.0.4",
     "sweetalert2": "^9.4.0"
   },
